# RLD

./: .gitignore  README.md  play_game.py  pyproject.toml  requirements.txt  run_gym_env.py  run_viewer.py  test-ensemble.mjs  test-paper-maze.mjs  test-phase-c.mjs  test-stages.mjs  train_agent.py
assets/dungeons/: level_01_easy.txt  level_02_trap.txt  level_03_maze.txt
docs/: ACT1_SUMMARY.md  DUNGEON_EDITOR.md  ENGINE_ARCHITECTURE.md  GAME_LOOP_REDESIGN.md  GDD.md  MULTI_STAGE_DUNGEON.md  NEXT_STEPS.md  TASK_BREAKDOWN.md  research-plan-phase14.md
docs/devlog/: 2026-02-14-multi-stage-impl.md  2026-02-14-multi-stage-plan.md  2026-02-14-quick-test.md  2026-02-20-dqn-implementation.md  2026-02-20-phase14-research.md  2026-02-20-phase15-implementation.md  2026-02-22-phase-e1-balance-simulator.md  2026-02-24-browser-test.md  2026-02-25-act1-ui-polish.md
sim/: run-balance.js  simulator.js  strategies.js
src/agents/: __init__.py  agent.py
src/algorithms/: __init__.py  q_learning.py
src/core/: __init__.py  grid.py  tiles.py
src/env/: __init__.py  dungeon_env.py
src/ui/: __init__.py  renderer.py
tests/: test_gym_env.py
web/: index.html
web/css/: style.css
web/js/: main.js
web/js/game/: acla.js  actor-critic.js  agent.js  briefing.js  double-qlearning.js  dqn.js  dungeon-generator.js  dungeon-map.js  dyna-q.js  editor.js  ensemble.js  expected-sarsa.js  game-config.js  grid.js  local-qlearning.js  monte-carlo.js  multi-stage-grid.js  nn.js  prioritized-sweeping.js  qlearning.js  qv-learning.js  reinforce.js  renderer.js  run-state.js  sarsa-lambda.js  (+6 more)
