[project]
name = "rl-dungeon"
version = "0.1.0"
description = "Reinforcement Learning Dungeon - Learn RL through gaming"
readme = "docs/GDD.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=1.0.0",
    "numpy>=1.24.0",
    "pygame>=2.5.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
ml = [
    "torch>=2.0.0",
    "stable-baselines3>=2.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
